// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating webpack stats 5 {"format":"array-push","expected":"array-push"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 25254,
      "name": "main-6c1d26e76f6ba1fc75c8.js",
      "normalized": "main-*.js",
      "size": 70961,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-webpack-v5-array-push",
  "bundler": {
    "name": "webpack",
    "version": "5.90.0",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "main-6c1d26e76f6ba1fc75c8.js",
      ],
      "id": "179",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-179",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "0.0.1-beta.12",
  },
  "version": "2",
}
`;

exports[`Generating webpack stats 5 {"format":"commonjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 25254,
      "name": "main-6c1d26e76f6ba1fc75c8.js",
      "normalized": "main-*.js",
      "size": 70961,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-webpack-v5-cjs",
  "bundler": {
    "name": "webpack",
    "version": "5.90.0",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "main-6c1d26e76f6ba1fc75c8.js",
      ],
      "id": "179",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-179",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "0.0.1-beta.12",
  },
  "version": "2",
}
`;

exports[`Generating webpack stats 5 source maps are enabled does not include any source maps 1`] = `
{
  "assets": [
    {
      "gzipSize": 25254,
      "name": "main-6c1d26e76f6ba1fc75c8.js",
      "normalized": "main-*.js",
      "size": 70961,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "webpack",
    "version": "5.90.0",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "main-6c1d26e76f6ba1fc75c8.js",
      ],
      "id": "179",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-179",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "0.0.1-beta.12",
  },
  "version": "2",
}
`;

exports[`Generating webpack stats 5 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 25254,
      "name": "main-6c1d26e76f6ba1fc75c8.js",
      "normalized": "main-*.js",
      "size": 70961,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-webpack-v5-esm",
  "bundler": {
    "name": "webpack",
    "version": "5.90.0",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "main-6c1d26e76f6ba1fc75c8.js",
      ],
      "id": "179",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-179",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-179",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "0.0.1-beta.12",
  },
  "version": "2",
}
`;
